// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Model with all data 1`] = `
<a
  className="model"
  href="url"
  rel="noopener"
  target="_blank"
>
  <img
    alt="Смартфон Apple iPhone Xr 128GB"
    className="image photo"
    src="https://avatars.mds.yandex.net/get-mpic/1360852/img_id2508126924791923402.jpeg/orig"
  />
  <div
    className="modelInfo"
  >
    <div
      className="title"
    >
      <h1
        className="name title"
      >
        Смартфон Apple iPhone Xr 128GB
      </h1>
    </div>
    <div
      className="info"
    >
      <div
        className="rating"
      >
        <div
          className="rating"
        >
          <div
            className="stars stars_4_5"
          >
            <div
              className="star"
            />
            <div
              className="star"
            />
            <div
              className="star"
            />
            <div
              className="star"
            />
            <div
              className="star"
            />
          </div>
          <div
            className="value"
          >
            4.5
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`Model with disclaimer 1`] = `
<a
  className="model"
  href="url"
  rel="noopener"
  target="_blank"
>
  <img
    alt="Смартфон Apple iPhone Xr 128GB"
    className="image photo"
    src="https://avatars.mds.yandex.net/get-mpic/1360852/img_id2508126924791923402.jpeg/orig"
  />
  <div
    className="modelInfo"
  >
    <div
      className="title"
    >
      <h1
        className="name title"
      >
        Смартфон Apple iPhone Xr 128GB
      </h1>
    </div>
    <div
      className="info"
    >
      <div
        className="rating"
      >
        <div
          className="rating"
        >
          <div
            className="stars stars_4_5"
          >
            <div
              className="star"
            />
            <div
              className="star"
            />
            <div
              className="star"
            />
            <div
              className="star"
            />
            <div
              className="star"
            />
          </div>
          <div
            className="value"
          >
            4.5
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`Model without rating badge value 1`] = `
<a
  className="model"
  href="url"
  rel="noopener"
  target="_blank"
>
  <img
    alt="Смартфон Apple iPhone Xr 128GB"
    className="image photo"
    src="https://avatars.mds.yandex.net/get-mpic/1360852/img_id2508126924791923402.jpeg/orig"
  />
  <div
    className="modelInfo"
  >
    <div
      className="title"
    >
      <h1
        className="name title"
      >
        Смартфон Apple iPhone Xr 128GB
      </h1>
    </div>
    <div
      className="info"
    />
  </div>
</a>
`;
